--- a/css/main.scss
+++ b/css/main.scss
@@ -9,6 +9,7 @@ $baseurl: '{{ site.baseurl }}/images';
 @import 'libs/mixins';
 @import 'font-awesome.min.css';
 @import url('http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,800,800italic');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i');
 
 /*
 	Spectral by HTML5 UP
