--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -37,9 +37,9 @@
 
 // Palette.
 	$palette: (
-		bg:					#2e3842,
+		bg:					#2f3131,
 		fg:					#fff,
-		fg-bold:			#fff,
+		fg-bold:			#f9ba32,
 		fg-light:			rgba(255,255,255,0.5),
 		border:				#fff,
 		border-bg:			rgba(144,144,144,0.25),
@@ -47,7 +47,7 @@
 		border2-bg:			rgba(144,144,144,0.5),
 
 		accent1: (
-			bg:				#21b2a6,
+			bg:				#2f3131,
 			fg-bold:		#ffffff,
 			fg:				mix(#21b2a6, #ffffff, 25%),
 			fg-light:		mix(#21b2a6, #ffffff, 40%),
