--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -115,7 +115,7 @@
 		accent7: (
 			bg:				#ffffff,
 			fg-bold:		#2E3842,
-			h2-bold:		#f9ba32
+			h2-bold:		#f9ba32,
 			fg:				#4E4852,
 			fg-light:		#8E8892,
 			border:			#dfdfdf,
